<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="120dp"
    android:paddingHorizontal="25dp"
    tools:context=".ui.question.QuestionFollowAlongDialog">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/salmon_700"
        android:textFontWeight="700"
        android:textSize="18sp"
        android:text="@string/question_follow_along_title_follow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:text="@string/question_sample_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11"/>

    <View
        android:id="@+id/view2"
        android:layout_width="205dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/orange_700"
        android:background="@drawable/shape_fill_stroke_rect4_orange"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:text="@string/question_sample_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"/>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView14"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray_500"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/videoView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/question_follow_along_sign_descp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:text="@string/question_sample_descrp"
        app:layout_constraintTop_toBottomOf="@id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_answer_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_fill_rect10_orange700"
        android:text="@string/question_follow_along_button_complete"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="25dp"
        app:layout_constraintTop_toBottomOf="@id/textView16"/>
</androidx.constraintlayout.widget.ConstraintLayout>