<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.question.QuestionResultActivity">

    <include
        android:id="@+id/include_answer_toolbar"
        layout="@layout/toolbar_sub" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:text="@string/question_answer_title_question"
        android:textColor="@color/orange_700"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textview_result_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_result_date" />

    <TextView
        android:id="@+id/textview_result_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/gray_700"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/include_answer_toolbar"
        app:layout_constraintStart_toEndOf="@id/textView7"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textview_answer_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="11dp"
        android:text="@string/question_sample_question"
        android:textColor="@color/text_black"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/compose_answer_questiontype"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_answer_questiontype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        app:layout_constraintBottom_toBottomOf="@+id/textview_answer_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textview_answer_question"
        app:layout_constraintTop_toTopOf="@+id/textview_answer_question" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginVertical="20dp"
        android:background="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_answer_question" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginVertical="20dp"
        android:text="@string/question_answer_title_answer"
        android:textColor="@color/orange_700"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textview_answer_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="11dp"
        android:text="@string/question_sample_answer"
        android:textColor="@color/text_black"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="20dp"
        android:text="@string/question_result_sign_refer_to"
        android:textColor="@color/gray_500"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_answer_answer" />

    <VideoView
        android:id="@+id/videoview_answer_sign"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="20dp"
        android:text="@string/question_answer_title_sign_descp"
        android:textColor="@color/text_black"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/videoview_answer_sign" />

    <TextView
        android:id="@+id/textview_answer_descrp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="8dp"
        android:text="@string/question_sample_descrp"
        android:textColor="@color/text_black"
        android:textFontWeight="500"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button_answer_followalong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_whitespace"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/shape_fill_rect10_orange700"
        android:text="@string/question_answer_button_follow_along"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="25dp" />

</androidx.constraintlayout.widget.ConstraintLayout>