<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    android:backgroundTint="#88ffffff"
    tools:context=".ui.question.sign.SignAnswerDialog">


    <com.google.android.material.progressindicator.LinearProgressIndicator
        app:indicatorColor="@color/orange_700"
        android:id="@+id/linearProgressIndicator"
        android:progress="50"
        android:layout_width="160dp"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/question_follow_along_title_follow"
        android:textColor="@color/salmon_700"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearProgressIndicator" />

    <TextView
        android:id="@+id/textview_followdialog_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:text="@string/question_sample_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView11"/>

    <View
        android:id="@+id/view2"
        android:layout_width="205dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_followdialog_question"/>

    <TextView
        android:id="@+id/textview_followdialog_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/orange_700"
        android:background="@drawable/shape_fill_stroke_rect4_orange"
        android:textFontWeight="700"
        android:textSize="20sp"
        android:text="@string/question_sample_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2"/>

    <VideoView
        android:id="@+id/videoview_followdialog_sign"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textview_followdialog_answer"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/gray_500"
        android:textFontWeight="700"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/videoview_followdialog_sign"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/question_follow_along_sign_descp" />

    <TextView
        android:id="@+id/textview_follodialog_descrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:textSize="16sp"
        android:text="@string/question_sample_descrp"
        app:layout_constraintTop_toBottomOf="@id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_fill_rect10_orange700"
        android:text="다음단계"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_follodialog_descrp" />

    <Button
        android:id="@+id/btn_complete_without_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_fill_rect10_gray200"
        android:text="완료하고 블럭받지 않기"
        android:textColor="@color/gray_500"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_next_step" />



</androidx.constraintlayout.widget.ConstraintLayout>